# codebase-onboarding-doc

./: .codoc.yml.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  generate-docs.yml
src/codebase_onboarding_doc/: __init__.py  cli.py  code_analyzer.py  config.py  formatters.py  generator.py  git_miner.py  llm_client.py  models.py
tests/: test_code_analyzer.py  test_config.py  test_formatters.py  test_generator.py  test_models.py
